misite/логи.txt
 python  app.py
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 935-078-328
(6560) wsgi starting up on http://0.0.0.0:5000
(6560) accepted ('127.0.0.1', 63955)
(6560) accepted ('127.0.0.1', 63962)
Traceback (most recent call last):
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 2073, in wsgi_app
    response = self.handle_exception(e)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 2070, in wsgi_app
    response = self.full_dispatch_request()
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1515, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1513, in full_dispatch_request
    rv = self.dispatch_request()
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\app.py", line 1499, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**req.view_args)
  File "D:\программы\site\profile.py", line 21, in index
    return render_template('index.html',
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\flask\templating.py", line 148, in render_template
    ctx.app.jinja_env.get_or_select_template(template_name_or_list),
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\jinja2\environment.py", line 1081, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\jinja2\environment.py", line 1010, in get_template
    return self._load_template(name, globals)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\jinja2\environment.py", line 969, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\jinja2\loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\jinja2\environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\jinja2\environment.py", line 936, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "D:\программы\site\templates\index.html", line 89, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endblock'.
127.0.0.1 - - [29/May/2025 00:31:13] "GET / HTTP/1.1" 500 26124 0.364792
127.0.0.1 - - [29/May/2025 00:31:15] "GET /?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 6846 0.887949
127.0.0.1 - - [29/May/2025 00:31:15] "GET /?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 10680 0.009994
127.0.0.1 - - [29/May/2025 00:31:16] "GET /?__debugger__=yes&cmd=resource&f=ubuntu.ttf HTTP/1.1" 200 70363 0.004997
127.0.0.1 - - [29/May/2025 00:31:16] "GET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 633 0.003997
127.0.0.1 - - [29/May/2025 00:31:16] "GET /?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 633 0.002997
Traceback (most recent call last):
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\eventlet\hubs\selects.py", line 59, in wait
    listeners.get(fileno, hub.noop).cb(fileno)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\eventlet\greenthread.py", line 272, in main
    result = function(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\eventlet\wsgi.py", line 905, in process_request
    self.protocol(conn_state, self)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\eventlet\wsgi.py", line 365, in __init__
    self.finish()
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\eventlet\wsgi.py", line 829, in finish
    greenio.shutdown_safe(self.connection)
  File "C:\Users\User\AppData\Local\Programs\Python\Python311\Lib\site-packages\eventlet\greenio\base.py", line 477, in shutdown_safe
    return sock.shutdown(socket.SHUT_RDWR)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
ConnectionResetError: [WinError 10054] Удаленный хост принудительно разорвал существующее подключение
Removing descriptor: 916